# vmnet-helper

./: .codespell-ignore  .gitattributes  .gitignore  README.md  archive.sh  arm64.ini  bench  build.sh  client.c  common.h  config.h.in  example  fmt.sh  helper.c  install.sh  meson.build  options.c  options.h  os.h  plot  pyproject.toml  run  run.c  socket_x.h  version.h.in  version.json  web.mplstyle  x86_64.ini
.cursor/: rules.md
.cursor/rules/: project.mdc
.github/workflows/: install.yaml  integration-client.yaml  integration-helper.yaml  integration.yaml  release.yaml  test.yaml  vfkit.yaml  weekly.yaml
benchmarks/: full.yaml  offloading.yaml  quick.yaml
broker/: vmnet-broker.h
building/: archive.sh  gen-version  x86_64.ini
docs/: architecture.md  development.md  docker.md  examples.md  freebsd.md  integration.md  launchd.md  performance.md  podman.md  release.md  similar-tools.md  sudo.md
examples/: README.md  create-iso.sh  download.sh  qemu.sh  vfkit.sh
go/: go.mod
go/vmnet/: vmnet_test.go
performance/2025-02/M2/bench/socket_vmnet/bridged-qemu-2/: host-to-vm.json  vm-to-vm.json
performance/2025-02/M2/bench/socket_vmnet/bridged-qemu-3/: host-to-vm.json
performance/2025-02/M2/bench/socket_vmnet/bridged-vz-3/: vm-to-host.json
performance/2025-02/M2/bench/socket_vmnet/shared-vz-2/: host-to-vm.json  vm-to-host.json
performance/2025-02/M2/bench/vmnet-helper/bridged-krunkit-2/: vm-to-host.json
performance/2025-02/M2/bench/vmnet-helper/bridged-krunkit:nooffload-2/: host-to-vm.json
performance/2025-02/M2/bench/vmnet-helper/bridged-vfkit:offload-2/: vm-to-vm.json
performance/2025-02/M2/bench/vmnet-helper/host-krunkit-2/: vm-to-host.json  vm-to-vm.json
performance/2025-02/M2/bench/vmnet-helper/host-krunkit:nooffload-2/: vm-to-host.json
performance/2026-02/M2/minikube/: report.md
performance/2026-02/M2/minikube/bench/: krunkit-host-host-bidir.json  krunkit-host-host-rx.json  krunkit-host-host-tx.json  krunkit-host-vm-bidir.json  krunkit-host-vm-rx.json  krunkit-host-vm-tx.json  krunkit-pod-host-bidir.json  krunkit-pod-host-rx.json  krunkit-pod-host-tx.json  krunkit-pod-vm-bidir.json  krunkit-pod-vm-rx.json  krunkit-pod-vm-tx.json  vfkit-host-host-bidir.json  vfkit-host-host-rx.json  vfkit-host-host-tx.json  vfkit-host-vm-bidir.json  vfkit-host-vm-rx.json  vfkit-host-vm-tx.json  vfkit-pod-host-bidir.json  vfkit-pod-host-rx.json  vfkit-pod-host-tx.json  vfkit-pod-vm-bidir.json  vfkit-pod-vm-rx.json  vfkit-pod-vm-tx.json
performance/M2/bench/socket_vmnet/bridged-qemu-1/: host-to-vm.json  vm-to-host.json
performance/M2/bench/socket_vmnet/bridged-qemu-3/: vm-to-vm.json
performance/M2/bench/socket_vmnet/bridged-vz-2/: vm-to-host.json  vm-to-vm.json
performance/M2/bench/socket_vmnet/bridged-vz-3/: vm-to-vm.json
performance/M2/bench/socket_vmnet/shared-qemu-1/: host-to-vm.json  vm-to-host.json
performance/M2/bench/socket_vmnet/shared-qemu-2/: vm-to-host.json  vm-to-vm.json
performance/M2/bench/socket_vmnet/shared-qemu-3/: vm-to-host.json  vm-to-vm.json
performance/M2/bench/socket_vmnet/shared-vz-2/: vm-to-vm.json
performance/M2/bench/socket_vmnet/shared-vz-3/: vm-to-host.json
performance/M2/bench/vmnet-helper/bridged-krunkit-2/: host-to-vm.json  vm-to-vm.json
performance/M2/bench/vmnet-helper/bridged-krunkit:nooffload-2/: vm-to-vm.json
performance/M2/bench/vmnet-helper/bridged-vfkit-2/: host-to-vm.json
performance/M2/bench/vmnet-helper/bridged-vfkit:offload-2/: vm-to-host.json
performance/M2/bench/vmnet-helper/host-krunkit:nooffload-2/: vm-to-vm.json
performance/M2/bench/vmnet-helper/host-qemu-2/: host-to-vm.json  vm-to-host.json
performance/M2/bench/vmnet-helper/host-vfkit-2/: vm-to-vm.json
performance/M2/bench/vmnet-helper/shared-krunkit-2/: host-to-vm.json
performance/M2/bench/vmnet-helper/shared-krunkit:nooffload-2/: vm-to-host.json  vm-to-vm.json
performance/M2/bench/vmnet-helper/shared-vfkit-2/: vm-to-host.json
performance/M2/bench/vmnet-helper/shared-vfkit:offload-2/: vm-to-vm.json
performance/M3/bench/socket_vmnet/bridged-vz-1/: vm-to-host.json
performance/M3/bench/socket_vmnet/shared-qemu-2/: host-to-vm.json
performance/M3/bench/socket_vmnet/shared-vz-2/: host-to-vm.json  vm-to-host.json
performance/M3/bench/socket_vmnet/shared-vz-3/: host-to-vm.json
performance/M3/bench/vmnet-helper/bridged-krunkit:nooffload-2/: vm-to-host.json  vm-to-vm.json
performance/M3/bench/vmnet-helper/bridged-vfkit-2/: host-to-vm.json  vm-to-host.json  vm-to-vm.json
performance/M3/bench/vmnet-helper/host-krunkit-2/: vm-to-host.json
performance/M3/bench/vmnet-helper/host-krunkit:nooffload-2/: host-to-vm.json
performance/M3/bench/vmnet-helper/host-qemu-2/: vm-to-host.json
performance/M3/bench/vmnet-helper/shared-krunkit:nooffload-2/: vm-to-host.json
performance/M3/bench/vmnet-helper/shared-qemu-2/: vm-to-host.json
performance/M3/bench/vmnet-helper/shared-vfkit-2/: host-to-vm.json
performance/M3/bench/vmnet-helper/shared-vfkit:offload-2/: host-to-vm.json
performance/benchmarks/: offloading.yaml  quick.yaml
performance/plots/: drivers.yaml  offloading.yaml  web.mplstyle
plots/: drivers.yaml  offloading.yaml  socket_vmnet-scale.yaml  socket_vmnet-vms-qemu.yaml  socket_vmnet-vms-vz.yaml  vmnet-broker.yaml  vmnet-helper-drivers.yaml  vmnet-helper-vs-socket_vmnet.yaml
programs/: helper.c  log.h  meson.build  options.c  options.h  os.c  run.c
subprojects/: jansson.wrap
sudoers.d/: README.md  vmnet-helper
test/minikube/: README.md  test.py
test/minikube/iperf3/client/base/: deployment.yaml
test/minikube/iperf3/client/host-network/: kustomization.yaml
test/minikube/iperf3/client/pod-network/: kustomization.yaml
test/minikube/iperf3/server/base/: deployment.yaml
test/minikube/iperf3/server/pod-network/: kustomization.yaml  service.yaml
testing/: __init__.py  cidata.py  disks.py  helper.py  helper_test.py  mac.py  ssh.py  validate.py  vm.py
vmnet/: __init__.py  cidata.py  disks.py  helper.py  helper_test.py  mac.py  ssh.py  store.py  vm.py
vmnet-broker/: client.c  meson.build
(+223 files in other folders)
